--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 *.class
+api.iml
+.idea/
+workspace.xml
+
+target/
+
+
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +17,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+src/main/resources/config.properties
+.idea/*
