--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
+
+    <!--<context-param>-->
+        <!--<param-name>log4jConfigLocation</param-name>-->
+        <!--<param-value>classpath:log4j-${ENV-NAME}.xml</param-value>-->
+    <!--</context-param>-->
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>-->
+    <!--</listener>-->
+
+
     <context-param>
         <param-name>contextClass</param-name>
         <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
@@ -31,6 +42,11 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>br.com.pandox.xxx.boot</param-value>
     </context-param>
+
+    <!--<context-param>-->
+        <!--<param-name>spring.profiles.active</param-name>-->
+        <!--<param-value>${ENV-NAME}</param-value>-->
+    <!--</context-param>-->
 
 
     <listener>
