--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+        <!-- Tymeleaf -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+
+
         <!-- ORM -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -155,6 +163,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jsp-2.1</artifactId>
+            <version>6.0.0</version>
         </dependency>
 
         <!-- Commons -->
