--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
-jdbc.url=jdbc:hsqldb:hsql://localhost/testdb
-jdbc.user=sa
-jdbc.pass=
+jdbc.url=jdbc:mysql://localhost:3306/camx_development
+jdbc.user=devdb
+jdbc.pass=uol123
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.driver=com.mysql.jdbc.Driver
